=== Opus Primus changelog.txt ===
Last revised February 22, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.0.1 ==
= Code =
* Added 'opus_footer_after' action hook
* Change classes in '404.php' from using underscores to using hyphens
* Created new methods `the_loop_wrapped` and `the_loop_archives_wrapped`
* Modified action hooks to more semantic naming convention: `opus_<section>_<placement>`
* Moved 'opus_body_bottom' action hook to immediately before closing body tag
* Replaced `the_loop` method and surrounding code with `the_loop_wrapped`
* Replaced `the_loop_archives` method and surrounding code with `the_loop_archives_wrapped`
* Wrapped 'opus_modified_post_after' action hook in conditional making it consistent with 'opus_modified_post_before'

= CSS =
* Center top level menu items only - better aesthetics with short page titles

= Miscellaneous =
* Fixed no comments message
* Minor code formatting
* Refactored the 'hooks-actions.txt' listing
* Updated 'theme-version-guidelines.txt' as taken from http://opusprimus.com/under-the-page/theme-version-guidelines/
* Updated 'hooks-actions.txt' as taken from http://opusprimus.com/under-the-page/hooks-actions/

= Current Internet Browsers Reviewed =
* Apple Safari
* Firefox
* Google Chrome
* Internet Explorer
* Opera

/** ------------------------------------------------------------------------- */

== Version 1.0 ==
* Initial release - February 2013

/** ------------------------------------------------------------------------- */

== Copyright ==
Copyright (c) 2012-2013, Opus Primus

This file is part of Opus Primus.

Opus Primus is free software; you can redistribute it and/or modify it under the
terms of the GNU General Public License version 2, as published by the Free
Software Foundation.

You may NOT assume that you can use any other version of the GPL.

This program is distributed in the hope that it will be useful, but WITHOUT ANY