@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
   <component name="ChangeListManager">
-    <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="* Modified action hooks to more semantic naming convention: `opus_&lt;section&gt;_&lt;placement&gt;` (part III) ... complete">
+    <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="">
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/404.php" afterPath="$PROJECT_DIR$/404.php" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/style.css" afterPath="$PROJECT_DIR$/style.css" />
     </list>
     <ignored path="opus-primus.iws" />
     <ignored path=".idea/workspace.xml" />
@@ -27,13 +27,20 @@
   </component>
   <component name="FileEditorManager">
     <leaf>
-      <file leaf-file-name="class.OpusPrimusImages.php" pinned="false" current="true" current-in-tab="true">
-        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusImages.php">
+      <file leaf-file-name="style.css" pinned="false" current="true" current-in-tab="true">
+        <entry file="file://$PROJECT_DIR$/style.css">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0">
-              <folding>
-                <element signature="e#6#1425#0" expanded="true" />
-              </folding>
+            <state line="46" column="22" selection-start="2338" selection-end="2338" vertical-scroll-proportion="0.35450518">
+              <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="changelog.txt" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/changelog.txt">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="1" column="24" selection-start="58" selection-end="58" vertical-scroll-proportion="0.0">
+              <folding />
             </state>
           </provider>
         </entry>
@@ -51,7 +58,6 @@
   <component name="IdeDocumentHistory">
     <option name="changedFiles">
       <list>
-        <option value="$PROJECT_DIR$/includes/class.OpusPrimusStructures.php" />
         <option value="$PROJECT_DIR$/archive.php" />
         <option value="$PROJECT_DIR$/author.php" />
         <option value="$PROJECT_DIR$/footer.php" />
@@ -67,6 +73,7 @@
         <option value="$PROJECT_DIR$/single.php" />
         <option value="$PROJECT_DIR$/404.php" />
         <option value="$PROJECT_DIR$/changelog.txt" />
+        <option value="$PROJECT_DIR$/style.css" />
       </list>
     </option>
   </component>
@@ -103,6 +110,7 @@
       <sortByType />
     </navigator>
     <panes>
+      <pane id="Scope" />
       <pane id="ProjectPane">
         <subPane>
           <PATH>
@@ -135,27 +143,8 @@
               <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
             </PATH_ELEMENT>
           </PATH>
-          <PATH>
-            <PATH_ELEMENT>
-              <option name="myItemId" value="opus-primus" />
-              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.ProjectViewProjectNode" />
-            </PATH_ELEMENT>
-            <PATH_ELEMENT>
-              <option name="myItemId" value="opus-primus" />
-              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.ProjectViewModuleNode" />
-            </PATH_ELEMENT>
-            <PATH_ELEMENT>
-              <option name="myItemId" value="opus-primus" />
-              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
-            </PATH_ELEMENT>
-            <PATH_ELEMENT>
-              <option name="myItemId" value="includes" />
-              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
-            </PATH_ELEMENT>
-          </PATH>
         </subPane>
       </pane>
-      <pane id="Scope" />
     </panes>
   </component>
   <component name="PropertiesComponent">
@@ -184,6 +173,9 @@
   </component>
   <component name="PublishConfig" serverName="EAC" serverId="b2adc90a-7e76-4fb0-b72a-303460d5e474">
     <servers>
+      <server id="8f2263d4-2bd0-4852-b176-af9074351d44">
+        <serverdata />
+      </server>
       <server id="a02dc929-e129-47da-b25b-a6729e5d4ca6">
         <serverdata />
       </server>
@@ -1499,7 +1491,11 @@
       <created>1361478233057</created>
       <updated>1361478233057</updated>
     </task>
-    <option name="localTasksCounter" value="305" />
+    <task id="LOCAL-00305" summary="* Change classes in '404.php' from using underscores to using hyphens">
+      <created>1361580382008</created>
+      <updated>1361580382008</updated>
+    </task>
+    <option name="localTasksCounter" value="306" />
     <servers>
       <GitHub shared="false">
         <commitMessageFormat>{id} {summary}</commitMessageFormat>
@@ -1543,7 +1539,7 @@
       <window_info id="Database" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="3" side_tool="false" content_ui="tabs" />
       <window_info id="Structure" active="false" anchor="left" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.25" sideWeight="0.5" order="1" side_tool="true" content_ui="tabs" />
       <window_info id="Remote Host" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="4" side_tool="false" content_ui="tabs" />
-      <window_info id="Project" active="false" anchor="left" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="true" weight="0.24388674" sideWeight="0.67633927" order="0" side_tool="false" content_ui="combo" />
+      <window_info id="Project" active="false" anchor="left" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="true" weight="0.25032175" sideWeight="0.67633927" order="0" side_tool="false" content_ui="combo" />
       <window_info id="Debug" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.4" sideWeight="0.5" order="4" side_tool="false" content_ui="tabs" />
       <window_info id="Favorites" active="false" anchor="left" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="2" side_tool="true" content_ui="tabs" />
       <window_info id="Event Log" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.3272727" sideWeight="0.5" order="10" side_tool="true" content_ui="tabs" />
@@ -1596,7 +1592,7 @@
     <option name="SHOW_VCS_ERROR_NOTIFICATIONS" value="true" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Modified action hooks to more semantic naming convention: `opus_&lt;section&gt;_&lt;placement&gt;` (part II)" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Change classes in '404.php' from using underscores to using hyphens" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="false" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -1609,7 +1605,6 @@
     <option name="UPDATE_GROUP_BY_CHANGELIST" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="* Removed THA support; chaining action hooks does not appear to work too well ... yet!&#10;* All additional hooks added specifically for THA support will remain" />
     <MESSAGE value="Changed &quot;Author&quot; details to Edward Caissie for theme style header block only ... all other author references remain as Opus Primus" />
     <MESSAGE value="Re-Add THA support ... action hooks can be chained and I should be chained to a train out of Dodge for trying to make this much too complicated before" />
     <MESSAGE value="* A balance of THA project files for reference" />
@@ -1634,144 +1629,93 @@
     <MESSAGE value="* Added revision date and a bit of reorganization" />
     <MESSAGE value="* Modified action hooks to more semantic naming convention: `opus_&lt;section&gt;_&lt;placement&gt;` (part I)" />
     <MESSAGE value="* Modified action hooks to more semantic naming convention: `opus_&lt;section&gt;_&lt;placement&gt;` (part II)" />
+    <MESSAGE value="* Change classes in '404.php' from using underscores to using hyphens" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
   </component>
   <component name="editorHistoryManager">
-    <entry file="file://$PROJECT_DIR$/image.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="46" column="25" selection-start="1519" selection-end="1522" vertical-scroll-proportion="0.33226836">
-          <folding>
-            <element signature="e#6#1317#0" expanded="true" />
-          </folding>
-        </state>
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/opus-primus-archive-aside.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0">
-          <folding />
-        </state>
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/page.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="-1.0753012">
-          <folding />
-        </state>
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/single.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="-0.99698794">
-          <folding>
-            <element signature="e#6#1300#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="-0.99698794" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/comments.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="40" column="26" selection-start="1381" selection-end="1384" vertical-scroll-proportion="0.33333334">
-          <folding>
-            <element signature="e#6#1163#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="40" column="26" selection-start="1381" selection-end="1384" vertical-scroll-proportion="0.33333334" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusArchives.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="103" column="46" selection-start="3769" selection-end="3772" vertical-scroll-proportion="-4.1764708">
-          <folding>
-            <element signature="e#6#1363#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="103" column="46" selection-start="3769" selection-end="3772" vertical-scroll-proportion="-4.1764708" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusAuthors.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="298" column="20" selection-start="12103" selection-end="12103" vertical-scroll-proportion="-8.961538">
-          <folding>
-            <element signature="e#6#1339#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="298" column="20" selection-start="12103" selection-end="12103" vertical-scroll-proportion="-8.961538" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusComments.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="134" column="20" selection-start="4376" selection-end="4376" vertical-scroll-proportion="-23.73077">
-          <folding>
-            <element signature="e#6#1261#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="134" column="20" selection-start="4376" selection-end="4376" vertical-scroll-proportion="-23.73077" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusDefaults.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0">
-          <folding />
-        </state>
+        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusGallery.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="342" column="20" selection-start="13697" selection-end="13697" vertical-scroll-proportion="-8.961538">
-          <folding>
-            <element signature="e#6#1313#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="342" column="20" selection-start="13697" selection-end="13697" vertical-scroll-proportion="-8.961538" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusMetaBoxes.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="75" column="21" selection-start="2405" selection-end="2410" vertical-scroll-proportion="-4.0784316">
-          <folding>
-            <element signature="e#6#1339#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="75" column="21" selection-start="2405" selection-end="2410" vertical-scroll-proportion="-4.0784316" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusNavigation.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="136" column="12" selection-start="4397" selection-end="4400" vertical-scroll-proportion="-4.1764708">
-          <folding>
-            <element signature="e#6#1371#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="136" column="12" selection-start="4397" selection-end="4400" vertical-scroll-proportion="-4.1764708" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusPosts.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="774" column="15" selection-start="28667" selection-end="28667" vertical-scroll-proportion="-23.73077">
-          <folding>
-            <element signature="e#6#1382#0" expanded="true" />
-          </folding>
-        </state>
+        <state line="774" column="15" selection-start="28667" selection-end="28667" vertical-scroll-proportion="-23.73077" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="537" column="75" selection-start="21884" selection-end="21884" vertical-scroll-proportion="0.906298">
-          <folding>
-            <element signature="e#6#1392#0" expanded="true" />
-          </folding>
-        </state>
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/changelog.txt">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="7" column="69" selection-start="212" selection-end="281" vertical-scroll-proportion="0.17246377">
-          <folding />
-        </state>
+        <state line="537" column="75" selection-start="21884" selection-end="21884" vertical-scroll-proportion="0.906298" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusImages.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="-0.0">
-          <folding>
-            <element signature="e#6#1425#0" expanded="true" />
-          </folding>
+        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/functions.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/includes/opus-ignite.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/changelog.txt">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="1" column="24" selection-start="58" selection-end="58" vertical-scroll-proportion="0.0">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/style.css">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="46" column="22" selection-start="2338" selection-end="2338" vertical-scroll-proportion="0.35450518">
+          <folding />
         </state>
       </provider>
     </entry>
